Fix Navigation item spacing #73

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ h6 {
   font-size: 1em;
   color: #ffffff;
   transition: all 0.3s ease;
+  margin: 3px;
 }
 
 .navbar .nav-link:hover,
